[tool.poetry]
name = "pasportaservo"
version = "1.0.0"
description = "Pasporta Servo estas senpaga tutmonda gastiga servo."
authors = ["TEJO <oficejo@tejo.org>"]
license = "GNU AGPLv3"
readme = "README.md"
package-mode = false
homepage = "https://www.pasportaservo.org/"
repository = "https://github.com/tejoesperanto/pasportaservo"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.25"
psycopg2 = "2.8.6"
pillow = "10.3.0"
awesome-slugify = "1.6.5"
commonmark = "0.9.1"
csscompressor = "0.9.5"
django-anymail = {version = "10.3", extras = ["postmark"]}
django-braces = "1.14.0"
djangocodemirror = "2.1.0"
django-compressor = "2.4"
django-countries = "7.3.2"
django-crispy-forms = "1.12.0"
django-dnt = "0.2.0"
django-el-pagination = "3.3.0"
django-extensions = "3.1.1"
django-filter = "22.1"
django-logentry-admin = "1.1.0"
django-phonenumber-field = "5.0.0"
django-postman = "4.3.0"
django-sass-processor = "0.8.2"
django-simplemde = "0.1.3"
django-solo = "1.1.5"
django-statici18n = "2.0.1"
django-geojson = "3.1.0"
faker = "12.1.0"
fontawesomefree = "6.0.0b2"
geocoder = "1.38.1"
geojson = "2.5.0"
gql = {version = "3.1.0", extras = ["requests"]}
itsdangerous = "1.1.0"
libsass = "0.20.1"
packvers = "21.5"
pymemcache = "3.5.2"
phonenumberslite = "8.12.19"
requests = "2.27.1"
rstr = "3.0.0"
sentry-sdk = ">=1.18"
user-agents = "2.2.0"
wheel = "^0.44.0"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "4.12.2"
bpython = "0.21"
coverage = "7.3.0"
django-debug-toolbar = "3.6.0"
django-webtest = "1.9.10"
fabric = "2.7.1"
factory-boy = "3.2.0"
flake8 = "6.1.0"
isort = "5.12.0"
pre-commit = "3.3.3"
pyquery = "2.0.0"
sqlparse = ">=0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
